core/yaml/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      containers:
      - name: webhook
        image: almir/webhook
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: webhook-config-volume
          mountPath: /etc/webhook
          readOnly: true
        - name: script-volume
          mountPath: /scripts
          readOnly: true
      volumes:
      - name: webhook-config-volume
        configMap:
          name: webhook-config
      - name: script-volume
        configMap:
          name: update-script
